--- a/html/styles.css
+++ b/html/styles.css
@@ -7,8 +7,68 @@
   top: 5px;
   left: 200px;
 }
+.sacardinheiro{
+  font-size:18px;
+  background-color: rgb(202, 201, 201);
+  color: #FFF;
+  float:center;
+  text-align:center;
+  line-height:20px;
+  padding-top: -22px;
+}
+#ajustebutton{
+  position: absolute;
+  margin-top: 20px;
+  margin-left: 17px;
+}
+.quickmenu{
+  padding-top: 10px;
+  font-size: 19px;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: -1px;
+  text-align: center;
+}
+.menurapido{
+  position: relative;
+  background-color: #16171F;
+  color: rgb(255, 255, 255, 0.60);
+  margin: 0;
+  margin-left: 20px;
+  width: auto;
+  height: 350px;
+  right: 10px;
+  float: right;
+  opacity: 0.5;
+  -webkit-transition: opacity 0.2s; /* Safari */
+  transition: opacity 0.2s;
+}
+.menurapido:hover{
+  position: relative;
+  background-color: #16171F;
+  color: rgb(255, 255, 255, 0.60);
+  margin: 0;
+  margin-left: 20px;
+  width: auto;
+  height: 350px;
+  right: 10px;
+  float: right;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s; /* Safari */
+  transition: opacity 0.2s;
+}
+.menurapidoct{
+  width: 260px;
+  height: 45px;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: #2B2C3D;
+  border-bottom: 2px solid rgb(204, 128, 128);
+  text-align: center;
+}
 html {
   overflow: hidden;
+  margin-top: 85px;
 }
 @font-face {
   font-family: 'pricedown';
@@ -21,6 +81,46 @@ html {
 }
 .sans {
   font-family: 'Roboto', sans-serif;
+}
+.menubank{
+  margin-left: 22px;
+  margin-top: -540px;
+  color: white;
+  font-size: 40px;
+}
+.currentBalance{
+  color: rgb(255, 255, 255);
+  font-size: 26px;
+  font-family: IMPACT !important;
+  font-style: inherit;
+}
+.saldobox{
+  border-color: 2px solid black;
+  color: gray;
+  text-align: center;
+  font-size: 13px;
+  top: 0;
+  left: 0;
+  right: 18px;
+  position: relative;
+}
+#amount{
+  background-color: rgba(0, 0, 0, 0.28);
+  border: 0px;
+  height: 40px;
+  text-align: center;
+  font-size: 16px;
+  font-family: Bebas;
+}
+#toPlayer{
+  background-color: rgba(0, 0, 0, 0.527);
+  border: 0px;
+  height: 40px;
+
+  text-align: center;
+  font-size: 20px;
+  font-family: Bebas;
+  margin-left 30px;
 }
 h1,h2,h3,h4 {
   margin: 0;
@@ -46,6 +146,12 @@ h1,h2,h3,h4 {
   margin: 0;
   margin-right: 6px;
   padding: 0;
+}
+#saldostyle{
+  margin-top: -20px;
+  margin-left: 800px;
+  color:white;
+  font-size: 15px;
 }
 #add-balance {
   float:right;
@@ -87,38 +193,99 @@ h1,h2,h3,h4 {
   height: 30px;
   width: 100%;
 }
-.full-screen {
-  width: 100%;
-  height:100%;
-  display: flex;
-  align-items: center;
-}
+
 .bank-container {
-  width: 70%;
-  height: 700px;
-  background-color: #ddd;
-  border: 3px solid #222;
-  border-radius: 10px;
+  height: 600px;
+  width: 998px;
+  background-color: #1D1E27;
+  border-radius: 0px;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
   display: none;
   z-index: 9999999;
 }
+.logo{
+  width: 271px;
+  height: 48px;
+  float: left;
+  margin-left: -75px;
+}
 .header {
   width:100%;
   height: 100px;
-  background-color: white;
+  background-color: #222332bd;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.header .logo {
-  max-height: 80%;
-  margin-top: 10px;
-  margin-left: 10px;
+.header2 {
+  width:100%;
+  height: 75px;
+  background-color: #2B2C3D;
+
 }
+.formboard{
+  position: relative;
+  background-color: #16171F;
+  margin-left: 7px;
+  height: 350px;
+  opacity: 0.5;
+  -webkit-transition: opacity 0.2s; /* Safari */
+  transition: opacity 0.2s;
+  width: 230px;
+}
+.formboard:hover{
+  width: 230px;
+  position: relative;
+  background-color: #16171F;
+  margin-left: 7px;
+  height: 350px;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s; /* Safari */
+  transition: opacity 0.2s;
+}
+.sacardin{
+  padding-top: 11px;
+  padding-left: 5px;
+  letter-spacing: -1px;
+  text-align: center;
+  background-color: #2B2C3D;
+  width: 98.2%;
+  height: 10%;
+  color: rgb(255, 255, 255, 0.60);
+  font-family: 'Roboto', sans-serif;
+  font-size: 19px;
+  border-bottom: 2px solid rgb(106, 172, 106);
+}
+.depositdin{
+  padding-top: 11px;
+  padding-left: 5px;
+  letter-spacing: -1px;
+  text-align: center;
+  background-color: #2B2C3D;
+  width: 98.2%;
+  height: 10%;
+  color: rgb(255, 255, 255, 0.60);
+  font-family: 'Roboto', sans-serif;
+  font-size: 19px;
+  border-bottom: 2px solid rgb(119, 145, 230);
+}
+.transferdin{
+  padding-top: 11px;
+  padding-left: 5px;
+  letter-spacing: -1px;
+  text-align: center;
+  background-color: #2B2C3D;
+  width: 98.2%;
+  height: 10%;
+  color: rgb(255, 255, 255, 0.60);
+  font-family: 'Roboto', sans-serif;
+  font-size: 19px;
+  border-bottom: 2px solid rgb(187, 189, 187);
+}
+
 .header .header-right {
   color: #777;
   margin-right: 70px;
@@ -128,20 +295,53 @@ h1,h2,h3,h4 {
   float: right;
   margin-top: 30px;
 }
-.body {
-  width: 100%;
-  height: 600px;
-  display: none;
-}
+
 .centered {
+  width: 1000px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 50px;
-  width: 80%;
-  height: 500px;
-  margin-left:auto;
+  justify-content: center;
+  border-radius: 0px;
+  margin-left: auto;
   margin-right: auto;
+}
+.fecharbank{
+  color: white;
+  font-size: 30px;
+  margin: -540px;
+  float: right;
+  margin-right: 18px;
+}
+.fecharbank:hover{
+  color: rgb(219, 154, 154);
+  font-size: 30px;
+  margin: -540px;
+  margin-right: 18px;
+  float: right;
+  -webkit-transition: color 0.5s; /* Safari */
+  transition: color 0.5s;
+}
+.opcontent{
+  position: relative;
+  margin-left: 38px;
+  width:795px;
+  height: 35px;
+  background-color: #2B2C3D;
+  opacity: 0.5;
+}
+.optxt{
+  color: white;
+  font-size: 20px;
+  padding: 5px 5px 5px 15px;
+  margin-left: 30px;
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+#id{
+  float: right;
+  font-size: 20px;
 }
 .button {
   flex-grow: 1;
@@ -150,14 +350,47 @@ h1,h2,h3,h4 {
   text-align: center;
   margin-left: 40px;
   margin-right: 40px;
-  width: 300px;
-  background: #017ebc;
-  background-image: linear-gradient(to bottom, #017ebc, #005285);
-  border-radius: 4px;
+  width: 185px;
+  background: #101111;
+  border-radius: 1px;
   color: #ffffff;
-  font-size: 1.5em;
+  font-size: 1.1em;
   padding: 20px 20px 10px 20px;
   text-decoration: none;
+}
+.buttonnew{
+  height: 25px;
+  text-align: center;
+  width: 180px;
+  margin-left: 30px;
+  background: #1A1B26;
+  border-radius: 1px;
+  color: #ffffff;
+  font-size: 1.1em;
+  padding: 20px 20px 20px 20px;
+  text-decoration: none;
+  border: none;
+  -webkit-transition: background-color 0.2s; /* Safari */
+  transition: background-color 0.2s;
+  font-family: 'Roboto', sans-serif;
+}
+.buttonnew:hover{
+  height: 25px;
+  text-align: center;
+  width: 180px;
+  margin-left: 30px;
+  background-color: rgb(98, 206, 139);
+  border-radius: 1px;
+  color: rgb(48, 48, 48);
+  font-size: 1.1em;
+  padding: 20px 20px 20px 20px;
+  text-decoration: none;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  -webkit-transition: background-color 0.5s; /* Safari */
+  -webkit-transition: color 0.5s; /* Safari */
+  transition: background-color 0.5s;
+  transition: color 0.5s;
 }
 .button:focus, .submit {outline:0;}
 .number-display {
@@ -165,15 +398,19 @@ h1,h2,h3,h4 {
   align-items: center;
   height: 70px;
   text-align: center;
-  margin-left: 40px;
-  margin-right: 40px;
-  width: 100%;
+
   background: #017ebc;
-  background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);
-  border-radius: 4px;
   color: #777;
   font-size: 2em;
   padding: 10px 20px;
+}
+.submit:hover{
+  background-color: rgb(245, 245, 245);
+  color: black;
+  -webkit-transition: background-color 0.5s; /* Safari */
+  -webkit-transition: color 0.5s; /* Safari */
+  transition: background-color 0.5s;
+  transition: color 0.5s;
 }
 .number-display p {
   margin: 0;
@@ -182,7 +419,6 @@ h1,h2,h3,h4 {
 }
 input[type=text], select, textarea {
     width: 100%;
-    padding: 25px 20px;
     font-size: 1.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -192,21 +428,33 @@ input[type=text], select, textarea {
     resize: vertical;
 }
 input[type=submit], .submit {
-  height: 70px;
+  height: 60px;
   text-align: center;
-  width: 100%;
-  background: #017ebc;
-  background-image: linear-gradient(to bottom, #017ebc, #005285);
-  border-radius: 4px;
+  width: 85%;
+  margin-left: 30px;
+  background: #1A1B26;
+  border-radius: 1px;
   color: #ffffff;
-  font-size: 1.5em;
+  font-size: 1.1em;
   padding: 20px 20px 20px 20px;
   text-decoration: none;
   border: none;
+  -webkit-transition: background-color 0.2s; /* Safari */
+  transition: background-color 0.2s;
+
+}
+.botaofix{
+  bottom: 0;
+  left: 0;
+  right: 27px;
+  font-size: 15px;
+  position: absolute;
+  padding-bottom: 10px;
 }
 .form {
   max-width: 74%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
+  
 }
